# fypbackend

./: .gitignore  ANDROID_BACKEND_GUIDE.md  README.md  code_formatting.py  comment_rules.py  download_model.py  explanation_rules.py  main.py  main_explained.md  notebook.txt  pyproject.toml  runserver.sh  setup.sh
