[project]
name = "back"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.135.2",
    "numpy<2",
    "protobuf>=7.34.1",
    "sentencepiece>=0.2.1",
    "torch==2.0.1",
    "transformers==4.40.2",
    "uvicorn[standard]>=0.42.0",
]
